fixed: increased the size of the ButtonFavorite button for ease of use on mobile devices

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -96,8 +96,8 @@
 }
 
 .favorite {
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
   color: var(--color-mebl-dark);
   transition: margin-top 0.2s ease-in-out;
 
