--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -130,8 +130,8 @@
   transition: color .3s ease-in-out;
 
   svg {
-    width: 16px;
-    height: 16px;
+    width: 24px;
+    height: 24px;
     fill: var(--color-white);
     transition: fill .3s ease-in-out, transform .3s ease-in-out;
 
